--- a/Mom_Baby/res/layout/activity_first.xml
+++ b/Mom_Baby/res/layout/activity_first.xml
@@ -1,13 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/bgrnd_doll"
     android:layout_height="match_parent"
+    android:background="@drawable/bgrnd_doll"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
- >
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <LinearLayout
         android:id="@+id/out_linear"
@@ -21,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
-            android:textSize="40dp"
+            android:textSize="40sp"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -38,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="90dp"
             android:text=" 로 그 인 "
-            android:textSize="30dp" />
+            android:textSize="30sp" />
 
         <Button
             android:id="@+id/btn_signup"
@@ -46,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
             android:text=" 회 원 가 입 "
-            android:textSize="30dp" />
+            android:textSize="30sp" />
     </LinearLayout>
 
 </RelativeLayout>
