--- a/Mom_Baby/res/layout/activity_growth.xml
+++ b/Mom_Baby/res/layout/activity_growth.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:text="BACK"
-            android:textSize="15dp" />
+            android:textSize="15sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -25,18 +25,17 @@
             android:layout_centerHorizontal="true"
             android:layout_centerInParent="true"
             android:text="@string/app_name"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:text="HOME"
-            android:textSize="15dp" />
+            android:textSize="15sp" />
     </RelativeLayout>
 
     <LinearLayout
-        
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
