--- a/Mom_Baby/res/layout/activity_login.xml
+++ b/Mom_Baby/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
             android:text="@string/app_name"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
         <LinearLayout
@@ -40,7 +40,7 @@
                 android:background="#ff9acd32"
                 android:gravity="center"
                 android:text=" L O G I N "
-                android:textSize="20dp" />
+                android:textSize="20sp" />
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -53,7 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="아이디 "
-                    android:textSize="20dp" />
+                    android:textSize="20sp" />
 
                 <EditText
                     android:id="@+id/edit_id"
@@ -71,7 +71,7 @@
                     android:layout_below="@id/text_id"
                     android:paddingTop="26dp"
                     android:text="비밀번호 "
-                    android:textSize="20dp" />
+                    android:textSize="20sp" />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -91,7 +91,7 @@
             android:background="#ffffdab9"
             android:padding="10dp"
             android:text="  로그인  "
-            android:textSize="20dp" />
+            android:textSize="20sp" />
     </LinearLayout>
 
 </RelativeLayout>
