--- a/Mom_Baby/res/layout/activity_main.xml
+++ b/Mom_Baby/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:layout_marginBottom="20dp"
             android:layout_marginTop="20dp"
             android:text="@string/app_name"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
         <Button
@@ -32,7 +32,7 @@
             android:layout_margin="5dp"
             android:gravity="center"
             android:text="우리 아이 MANAGER"
-            android:textSize="40dp" />
+            android:textSize="40sp" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -44,14 +44,14 @@
                 android:layout_height="270dp"
                 android:layout_margin="5dp"
                 android:text="주변 보건소"
-                android:textSize="28dp" />
+                android:textSize="28sp" />
 
             <Button
                 android:layout_width="160dp"
                 android:layout_height="270dp"
                 android:layout_toRightOf="@id/btn_hospital"
                 android:text="육아 매거진"
-                android:textSize="28dp" />
+                android:textSize="28sp" />
         </RelativeLayout>
     </LinearLayout>
 
