--- a/Mom_Baby/res/layout/activity_regone.xml
+++ b/Mom_Baby/res/layout/activity_regone.xml
@@ -12,7 +12,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:text="BACK"
-            android:textSize="15dp" />
+            android:textSize="15sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -20,14 +20,14 @@
             android:layout_centerHorizontal="true"
             android:layout_centerInParent="true"
             android:text="@string/app_name"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:text="HOME"
-            android:textSize="15dp" />
+            android:textSize="15sp" />
     </RelativeLayout>
 
     <Button
@@ -37,7 +37,7 @@
         android:layout_centerInParent="true"
         android:padding="10dp"
         android:text="+"
-        android:textSize="50dp"
+        android:textSize="50sp"
         android:textStyle="bold" />
 
     <TextView
@@ -46,6 +46,6 @@
         android:layout_below="@id/btn_regOne"
         android:layout_centerHorizontal="true"
         android:text="아이 등록"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
 </RelativeLayout>
