--- a/Mom_Baby/res/layout/activity_regtwo.xml
+++ b/Mom_Baby/res/layout/activity_regtwo.xml
@@ -12,7 +12,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:text="BACK"
-            android:textSize="15dp" />
+            android:textSize="15sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -20,14 +20,14 @@
             android:layout_centerHorizontal="true"
             android:layout_centerInParent="true"
             android:text="@string/app_name"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:text="HOME"
-            android:textSize="15dp" />
+            android:textSize="15sp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -53,8 +53,7 @@
                 android:layout_below="@id/btn_firstBaby"
                 android:layout_centerInParent="true"
                 android:text="임지현"
-                android:textSize="20dp" />
-
+                android:textSize="20sp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -69,7 +68,7 @@
                 android:layout_height="100dp"
                 android:padding="10dp"
                 android:text="+"
-                android:textSize="50dp"
+                android:textSize="50sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -78,8 +77,7 @@
                 android:layout_below="@id/btn_regTwo"
                 android:layout_centerInParent="true"
                 android:text="아이등록"
-                android:textSize="20dp"
-                 />
+                android:textSize="20sp" />
         </RelativeLayout>
     </RelativeLayout>
 
