--- a/Mom_Baby/res/layout/activity_signup.xml
+++ b/Mom_Baby/res/layout/activity_signup.xml
@@ -1,144 +1,79 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ghjh.mom_baby.First_Activity" >
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
+    android:orientation="vertical" >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#fcd036" 
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/logo" />
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="계정 만들기"
+        android:textStyle="bold"
+        android:textSize="25sp" />
+
+    <EditText
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:inputType="textEmailAddress"
+        android:hint="이메일" />
+
+    <EditText
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        android:inputType="numberPassword"
+        android:hint="비밀번호" />
+
+    <EditText
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        android:hint="닉네임" />
+
+    <TextView
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        android:text="주소"
+        android:textSize="15sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="vertical" >
+        android:gravity="center"
+        android:orientation="horizontal" >
 
-        <Button
+        <Spinner
+            android:id="@+id/spin_add1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_margin="10dp"
-            android:text="BACK" />
+            android:layout_height="wrap_content" />
 
-        <TextView
+        <Spinner
+            android:id="@+id/spin_add2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="20dp"
-            android:text="@string/app_name"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="340dp"
-            android:layout_margin="10dp"
-            android:layout_marginTop="25dp"
-            android:background="#fffff0f5"
-            android:orientation="vertical" >
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#ff9acd32"
-                android:gravity="center"
-                android:text=" 회 원 가 입"
-                android:textSize="20sp" />
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:padding="15dp" >
-
-                <TextView
-                    android:id="@+id/text_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:text="아이디 "
-                    android:textSize="15sp" />
-
-                <EditText
-                    android:id="@+id/edit_id"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@id/text_id"
-                    android:layout_marginLeft="15dp"
-                    android:layout_toRightOf="@id/text_id"
-                    android:hint="ex) gildong@gmail.com"
-                    android:paddingTop="5dp" />
-
-                <TextView
-                    android:id="@+id/text_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/text_id"
-                    android:paddingTop="30dp"
-                    android:text="비밀번호 "
-                    android:textSize="15sp" />
-
-                <EditText
-                    android:id="@+id/edit_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignLeft="@id/edit_id"
-                    android:layout_below="@id/edit_id"
-                    android:inputType="numberPassword" />
-
-                <TextView
-                    android:id="@+id/text_nick"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="110dp"
-                    android:text="닉네임"
-                    android:textSize="15sp" />
-
-                <EditText
-                    android:id="@+id/edit_nick"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignLeft="@id/edit_password"
-                    android:layout_below="@id/edit_password"
-                    android:hint="ex) 서언이 맘" />
-
-                <TextView
-                    android:id="@+id/text_add"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="170dp"
-                    android:text="주소"
-                    android:textSize="15sp" />
-
-                <Spinner
-                    android:id="@+id/spin_add1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/edit_nick"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_toRightOf="@+id/text_add" />
-
-                <Spinner
-                    android:id="@+id/spin_add2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignLeft="@id/spin_add1"
-                    android:layout_below="@id/spin_add1"
-                    android:layout_marginTop="10dp" />
-            </RelativeLayout>
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/btn_complete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="25dp"
-            android:background="#ffffdab9"
-            android:padding="10dp"
-            android:text="  완료  "
-            android:textSize="20sp" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/btn_complete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="25dp"
+        android:background="#fcd036"
+        android:padding="10dp"
+        android:text=" 엄마랑아이랑 사용 시작 "
+        android:textSize="20sp" />
+
+</LinearLayout>
