--- a/Mom_Baby/res/layout/activity_first.xml
+++ b/Mom_Baby/res/layout/activity_first.xml
@@ -2,50 +2,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bgrnd_doll"
+    android:background="#FCD036"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
     <LinearLayout
-        android:id="@+id/out_linear"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:background="#FFE4E1"
-        android:gravity="center"
-        android:orientation="vertical" >
+        android:layout_height="50dp"
+        android:background="#fcd036"
+        android:gravity="center_vertical" >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textSize="40sp"
-            android:textStyle="bold" />
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/logo" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_below="@id/out_linear"
-        android:gravity="center_horizontal"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/btn_login01"
-            android:layout_width="match_parent"
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="90dp"
-            android:text=" 로 그 인 "
-            android:textSize="30sp" />
+            android:layout_gravity="center"
+            android:src="@drawable/logo" />
 
-        <Button
-            android:id="@+id/btn_signup"
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:text=" 회 원 가 입 "
-            android:textSize="30sp" />
+            android:layout_gravity="center"
+            android:padding="10dp"
+            android:text="@string/app_name"
+            android:textColor="#ffffff"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="13dp"
+            android:text="소중한 우리아이의 성장과정을 저장하세요."
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
     </LinearLayout>
 
 </RelativeLayout>
