--- a/Mom_Baby/res/layout/activity_first.xml
+++ b/Mom_Baby/res/layout/activity_first.xml
@@ -5,19 +5,36 @@
     android:background="#FCD036"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" >
+    android:paddingRight="@dimen/activity_horizontal_margin" >
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
+        android:layout_alignParentRight="true"
         android:background="#fcd036"
         android:gravity="center_vertical" >
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/logo" />
+        <Button
+            android:id="@+id/btn_signup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#fcd036"
+            android:text="계정 만들기"
+            android:textColor="#ffffff" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="  |  "
+            android:textColor="#ffffff" />
+
+        <Button
+            android:id="@+id/btn_login01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#fcd036"
+            android:text="로그인"
+            android:textColor="#ffffff" />
     </LinearLayout>
 
     <LinearLayout
