--- a/Mom_Baby/res/layout/activity_signup.xml
+++ b/Mom_Baby/res/layout/activity_signup.xml
@@ -7,13 +7,42 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#fcd036" 
-        android:gravity="center_vertical">
+        android:background="#fcd036"
+        android:gravity="center_vertical"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin" >
 
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/logo" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/btn_signup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#fcd036"
+            android:text="계정 만들기"
+            android:textColor="#ffffff" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="  |  "
+            android:textColor="#ffffff" />
+
+        <Button
+            android:id="@+id/btn_login01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#fcd036"
+            android:text="로그인"
+            android:textColor="#ffffff" />
     </LinearLayout>
 
     <TextView
