--- a/Mom_Baby/res/layout/activity_regone.xml
+++ b/Mom_Baby/res/layout/activity_regone.xml
@@ -1,51 +1,64 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="15dp" >
+    android:gravity="center_horizontal"
+    android:orientation="vertical" >
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="50dp"
+        android:background="#fcd036"
+        android:gravity="center_vertical"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin" >
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:background="#fcd036"
             android:text="BACK"
-            android:textSize="15sp" />
+            android:textColor="#ffffff" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerInParent="true"
-            android:text="@string/app_name"
-            android:textSize="20sp" />
+            android:text="엄마랑아이랑"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:background="#fcd036"
             android:text="HOME"
-            android:textSize="15sp" />
-    </RelativeLayout>
+            android:textColor="#ffffff" />
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_regOne"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+    <ImageButton
+        android:id="@+id/imgbtn_regOne"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:padding="10dp"
-        android:text="+"
-        android:textSize="50sp"
-        android:textStyle="bold" />
+        android:background="@android:color/transparent"
+        android:src="@drawable/logo" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btn_regOne"
-        android:layout_centerHorizontal="true"
-        android:text="아이 등록"
+        android:layout_below="@id/imgbtn_regOne"
+        android:layout_centerInParent="true"
+        android:text="+ 아이 등록"
         android:textSize="20sp" />
 
 </RelativeLayout>
