--- a/Mom_Baby/res/layout/activity_regtwo.xml
+++ b/Mom_Baby/res/layout/activity_regtwo.xml
@@ -1,34 +1,49 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="15dp" >
+    android:gravity="center_horizontal"
+    android:orientation="vertical" >
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="50dp"
+        android:background="#fcd036"
+        android:gravity="center_vertical"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin" >
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:background="#fcd036"
             android:text="BACK"
-            android:textSize="15sp" />
+            android:textColor="#ffffff" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerInParent="true"
-            android:text="@string/app_name"
-            android:textSize="20sp" />
+            android:text="엄마랑아이랑"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:background="#fcd036"
             android:text="HOME"
-            android:textSize="15sp" />
-    </RelativeLayout>
+            android:textColor="#ffffff" />
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -41,16 +56,18 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp" >
 
-            <Button
-                android:id="@+id/btn_firstBaby"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:padding="10dp" />
+            <ImageButton
+                android:id="@+id/imgbtn_firstBaby"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:padding="10dp"
+                android:src="@drawable/logo" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/btn_firstBaby"
+                android:layout_below="@id/imgbtn_firstBaby"
                 android:layout_centerInParent="true"
                 android:text="임지현"
                 android:textSize="20sp" />
@@ -62,21 +79,20 @@
             android:layout_margin="10dp"
             android:layout_toRightOf="@id/relative_regOne" >
 
-            <Button
-                android:id="@+id/btn_regTwo"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+            <ImageButton
+                android:id="@+id/imgbtn_regTwo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
                 android:padding="10dp"
-                android:text="+"
-                android:textSize="50sp"
-                android:textStyle="bold" />
+                android:src="@drawable/logo" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/btn_regTwo"
+                android:layout_below="@id/imgbtn_regTwo"
                 android:layout_centerInParent="true"
-                android:text="아이등록"
+                android:text="+ 아이 등록"
                 android:textSize="20sp" />
         </RelativeLayout>
     </RelativeLayout>
