--- a/Mom_Baby/res/layout/activity_main.xml
+++ b/Mom_Baby/res/layout/activity_main.xml
@@ -3,56 +3,73 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ghjh.mom_baby.MainActivity" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical" >
+        android:layout_height="50dp"
+        android:background="#fcd036"
+        android:gravity="center_vertical"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin" >
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="8dp"
+            android:src="@drawable/logo" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp"
-            android:text="@string/app_name"
-            android:textSize="30sp"
+            android:text="엄마랑아이랑"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
             android:textStyle="bold" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="130dp"
+        android:orientation="vertical"
+        android:padding="30dp" >
 
         <Button
             android:id="@+id/btn_manager"
             android:layout_width="match_parent"
-            android:layout_height="170dp"
-            android:layout_margin="5dp"
-            android:gravity="center"
+            android:layout_height="150dp"
+            android:layout_marginBottom="10dp"
             android:text="우리 아이 MANAGER"
-            android:textSize="40sp" />
+            android:textSize="20sp" />
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal" >
 
             <Button
                 android:id="@+id/btn_hospital"
-                android:layout_width="160dp"
-                android:layout_height="270dp"
-                android:layout_margin="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="130dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
                 android:text="주변 보건소"
-                android:textSize="28sp" />
+                android:textSize="20sp" />
 
             <Button
-                android:layout_width="160dp"
-                android:layout_height="270dp"
-                android:layout_toRightOf="@id/btn_hospital"
+                android:layout_width="wrap_content"
+                android:layout_height="130dp"
+                android:layout_weight="1"
                 android:text="육아 매거진"
-                android:textSize="28sp" />
-        </RelativeLayout>
+                android:textSize="20sp" />
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
