--- a/Mom_Baby/res/layout/activity_main.xml
+++ b/Mom_Baby/res/layout/activity_main.xml
@@ -1,9 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.ghjh.mom_baby.MainActivity" >
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,41 +34,77 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="130dp"
-        android:orientation="vertical"
-        android:padding="30dp" >
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="5dp" >
 
         <Button
-            android:id="@+id/btn_manager"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginBottom="10dp"
-            android:text="우리 아이 MANAGER"
-            android:textSize="20sp" />
+            android:id="@+id/btn_regOne"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:layout_margin="5dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/logo"
+            android:scaleType="fitXY" />
 
-        <LinearLayout
+        <Button
+            android:id="@+id/btn_register"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:layout_margin="5dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/logo"
+            android:scaleType="fitXY" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical"
+        android:padding="10dp" >
+
+        <Button
+            android:id="@+id/btn_injection"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="horizontal" >
+            android:text="예방접종 일정"
+            android:textSize="20sp" />
 
-            <Button
-                android:id="@+id/btn_hospital"
-                android:layout_width="wrap_content"
-                android:layout_height="130dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:text="주변 보건소"
-                android:textSize="20sp" />
+        <Button
+            android:id="@+id/btn_growth"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="성장 진단"
+            android:textSize="20sp" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="130dp"
-                android:layout_weight="1"
-                android:text="육아 매거진"
-                android:textSize="20sp" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/btn_diary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="육아 일기"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/btn_hospital"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="주변 보건소"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/btn_magazine"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="육아 매거진"
+            android:textSize="20sp" />
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
