삭제 및 버튼 크기 변경

--- a/Mom_Baby/res/layout/activity_addbaby1.xml
+++ b/Mom_Baby/res/layout/activity_addbaby1.xml
@@ -44,19 +44,18 @@
             android:text="HOME"
             android:textColor="#ffffff" />
     </LinearLayout>
-    
+
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/baby1"
-        />
+        android:background="@drawable/baby1" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="15dp" >
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal" >
 
         <TextView
             android:layout_width="90dp"
@@ -79,39 +78,39 @@
             android:layout_height="wrap_content"
             android:padding="15dp"
             android:text="생년월일" />
-        <TextView 
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="생년월일 intent들어갈 자리"
-            />
+            android:text="생년월일 intent들어갈 자리" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-         <TextView
+        android:orientation="horizontal" >
+
+        <TextView
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:padding="15dp"
             android:text="성별" />
-         
-         <RadioGroup 
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:orientation="horizontal"
-             >
-             <RadioButton 
-                 android:layout_width="90dp"
-                 android:layout_height="wrap_content"
-                 android:text="여아"
-                 />
-             <RadioButton 
-                 android:layout_width="90dp"
-                 android:layout_height="wrap_content"
-                 android:text="남아"
-                 />
-         </RadioGroup>
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal" >
+
+            <RadioButton
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:text="여아" />
+
+            <RadioButton
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:text="남아" />
+        </RadioGroup>
     </LinearLayout>
 
     <LinearLayout
@@ -128,7 +127,7 @@
         <EditText
             android:layout_width="130dp"
             android:layout_height="wrap_content" />
-       
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -150,7 +149,7 @@
         <EditText
             android:layout_width="130dp"
             android:layout_height="wrap_content" />
-       
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -172,7 +171,7 @@
         <EditText
             android:layout_width="130dp"
             android:layout_height="wrap_content" />
-       
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -180,13 +179,12 @@
             android:text="cm" />
     </LinearLayout>
 
-    <Button 
+    <Button
         android:id="@+id/btn_addbaby2"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="NEXT"
         android:layout_marginTop="20dp"
-        />
+        android:text="NEXT" />
 
 </LinearLayout>
