--- a/Mom_Baby/res/layout/activity_diagnose.xml
+++ b/Mom_Baby/res/layout/activity_diagnose.xml
@@ -86,7 +86,8 @@
             <EditText
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp" />
+                android:layout_marginLeft="10dp"
+                android:inputType="number" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -109,7 +110,8 @@
             <EditText
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp" />
+                android:layout_marginLeft="10dp"
+                android:inputType="number" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -132,7 +134,8 @@
             <EditText
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp" />
+                android:layout_marginLeft="10dp"
+                android:inputType="number" />
 
             <TextView
                 android:layout_width="wrap_content"
