--- a/Mom_Baby/res/layout/activity_list.xml
+++ b/Mom_Baby/res/layout/activity_list.xml
@@ -3,10 +3,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView 
-        android:layout_height="wrap_content"
+    <TextView
         android:layout_width="wrap_content"
-        android:text="list 입니당"
-        />
+        android:layout_height="wrap_content"
+        android:text="list 입니당" />
 
 </LinearLayout>
