id값 변경 및 밑줄 추가(매니페스트 파일 제외)

--- a/Mom_Baby/res/layout/activity_login.xml
+++ b/Mom_Baby/res/layout/activity_login.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginBottom="15dp"
         android:background="#fcd036"
         android:gravity="center_vertical"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -37,7 +38,7 @@
             android:textColor="#ffffff" />
 
         <Button
-            android:id="@+id/btn_login01"
+            android:id="@+id/btn_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#fcd036"
@@ -46,35 +47,40 @@
     </LinearLayout>
 
     <EditText
+        android:id="@+id/edit_email"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="25dp"
         android:hint="이메일"
         android:inputType="textEmailAddress" />
 
     <EditText
+        android:id="@+id/edit_passwd"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:hint="비밀번호"
-        android:inputType="numberPassword" />
+        android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/btn_login02"
-        android:layout_width="230dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="25dp"
-        android:background="#fcd036"
-        android:padding="10dp"
-        android:text=" 로그인 "
-        android:textColor="#ffffff"
-        android:textSize="20sp" />
-
-    <Button
+        android:id="@+id/btn_start"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:text="비밀번호를 잊으셨나요?" />
+        android:background="#fcd036"
+        android:padding="10dp"
+        android:text=" 로그인 "
+        android:textColor="#ffffff"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/txt_forget"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:clickable="true"
+        android:text="비밀번호를 잊으셨나요?"
+        android:textColor="#ffc107" />
 
 </LinearLayout>
