--- a/Mom_Baby/res/layout/activity_first.xml
+++ b/Mom_Baby/res/layout/activity_first.xml
@@ -29,7 +29,7 @@
             android:textColor="#ffffff" />
 
         <Button
-            android:id="@+id/btn_login01"
+            android:id="@+id/btn_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#fcd036"
