--- a/Mom_Baby/res/layout/activity_addbaby1.xml
+++ b/Mom_Baby/res/layout/activity_addbaby1.xml
@@ -70,8 +70,7 @@
 
             <EditText
                 android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                 />
+                android:layout_height="wrap_content" />
         </LinearLayout>
 
         <LinearLayout
@@ -85,10 +84,10 @@
                 android:padding="15dp"
                 android:text="생년월일" />
 
-            <TextView
+            <Button
+                android:id="@+id/btn_datepicker"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="생년월일 intent들어갈 자리" />
+                android:layout_height="wrap_content" />
         </LinearLayout>
 
         <LinearLayout
@@ -128,8 +127,7 @@
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:padding="15dp"
-                android:text="신장"
-                 />
+                android:text="신장" />
 
             <EditText
                 android:layout_width="130dp"
